# lusush

./: .Makefile.swp  .clangd  .cursorrules  .editorconfig  .gitignore  .lusushrc  13_user_customization_complete.md  ACHIEVEMENT_STATUS.md  ACHIEVEMENT_SUMMARY_COMPREHENSIVE.md  ADVANCED_FEATURES_IMPLEMENTATION_COMPLETE.md  ADVANCED_SCRIPTING_GUIDE.md  AI_ASSISTANT_FINAL_HANDOFF_SUCCESS.md  AI_ASSISTANT_HANDOFF.md  AI_ASSISTANT_HANDOFF_DOCUMENT.md  AI_ASSISTANT_HANDOFF_INTERACTIVE_FIXES.md  AI_ASSISTANT_HANDOFF_LAYERED_DISPLAY.md  AI_ASSISTANT_HANDOFF_LINUX_HISTORY_FIX.md  AI_ASSISTANT_MASTER_GUIDE.md  AI_ASSISTANT_QUICK_REFERENCE.md  AI_ASSISTANT_SESSION_SUMMARY_CTRL_R_FIX.md  AI_CONTEXT.md  AI_CONTEXT_UPDATE_SUMMARY.md  ALIAS_EXPANSION_IMPROVEMENT_PLAN.md  ALIAS_REFACTOR_SUMMARY.md  ALIAS_SYSTEM_CONSOLIDATION_COMPLETE.md  ANALYSIS_v1.3.0_CONFIG_CLEANUP.md  ARCHITECTURAL_CURSOR_FIX.md  ARROW_KEY_FIX_SUMMARY.md  AUTHORS  BACKSPACE_BOUNDARY_FIX.md  BACKSPACE_CONTENT_REWRITE_IMPLEMENTATION.md  BACKSPACE_CURRENT_STATUS.md  BACKSPACE_ENHANCEMENT_IMPLEMENTATION.md  BACKSPACE_INVESTIGATION_FINDINGS.md  BACKSPACE_LINE_WRAP_ANALYSIS.md  BACKSPACE_TASK_COMPLETION.md  BIDIRECTIONAL_STATE_SYNC_BACKSPACE_STATUS.md  BOTTOM_LINE_SOLUTION.md  BOTTOM_LINE_TEST_GUIDE.md  BOUNDARY_CROSSING_ANALYSIS.md  (+864 more)
src/: .lusush.c.swp  Makefile.am  Makefile.in  alias.c  alias.h  alias_expand.c  arithmetic.c  arithmetic_modern.c  autocorrect.c  autosuggestions.c  builtins.c  builtins.h  cmd_subst.c  cmdlist.c  cmdlist.h  compat.c  completion.c  completion_menu.c  completion_menu_theme.c  completion_types.c  config.c  config.h.in  config_registry.c  dict.c  dirstack.c  display_integration.c  enhanced_syntax_highlighting.c  env.c  env.h  errors.c  errors.h  exec.c  exec.h  executor.c  executor_modern.c  expand.c  expand.h  fixer.c  globals.c  history-editline.c  (+83 more)
src/builtins/: alias.c  builtins.c  enhanced_history.c  fc.c  history.c
src/debug/: debug_analysis.c  debug_breakpoints.c  debug_builtin.c  debug_core.c  debug_profile.c  debug_trace.c
src/display/: README.md  autosuggestions_layer.c  base_terminal.c  command_layer.c  composition_engine.c  continuation_prompt_layer.c  display_controller.c  layer_events.c  prompt_layer.c  screen_buffer.c  screen_buffer_menu.c  terminal_control.c
src/libfuzzy/: fuzzy_match.c  meson.build
src/libhashtable/: ht.c  ht_fnv1a.c  ht_strdouble.c  ht_strfloat.c  ht_strint.c  ht_strstr.c
src/line_editor/: buffer_trace.c  buffer_trace.h  command_history.c  command_history.h  completion.c  completion.h  completion_display.c  config.c  config.h  cursor_math.c  cursor_math.h  display.c  display.h  display_performance.c  display_performance.h  display_stabilization.c  display_stabilization.h  display_state_integration.c  display_state_integration.h  display_state_sync.c  display_state_sync.h  edit_commands.c  edit_commands.h  enhanced_tab_completion.c  enhanced_tab_completion.h  enhanced_terminal_detection.c  enhanced_terminal_detection.h  enhanced_terminal_integration.c  enhanced_terminal_integration.h  input_handler.c  input_handler.h  line_editor.c  line_editor.h  linux_platform_check.c  lle_history.c  lle_history.h  lle_integration.c  lle_integration.h  lle_state_observer.c  lle_state_observer.h  (+19 more)
src/line_editor/termcap/: lle_termcap.c  lle_termcap.h  lle_termcap_internal.h  meson.build
src/linenoise/: linenoise.c  linenoise_backup_complex.c  linenoise_clean_backup.c
src/linenoise/encodings/: utf8.c
src/lle/: README.md  adaptive_context_initialization.c  adaptive_native_controller.c  adaptive_terminal_detection.c  buffer_core.c  buffer_management.c  buffer_system.c  change_tracker.c  command_structure.c  cursor_manager.c  display_bridge.c  display_integration.c  edit_cache.c  edit_session_manager.c  error_handling.c  event_coordinator.c  event_handlers.c  event_queue.c  event_system.c  event_timer.c  formatting_engine.c  grapheme_detector.c  hashtable.c  history_buffer_bridge.c  history_buffer_integration.c  history_core.c  history_dedup.c  history_events.c  history_expansion.c  history_index.c  history_interactive_search.c  history_lusush_bridge.c  history_multiline.c  history_search.c  history_storage.c  input_keybinding_integration.c  input_parser_error_recovery.c  input_parser_integration.c  input_utf8_processor.c  input_widget_hooks.c  (+42 more)
src/lle/adaptive/: adaptive_context_initialization.c  adaptive_display_client_controller.c  adaptive_minimal_controller.c  adaptive_multiplexer_controller.c  adaptive_native_controller.c  adaptive_terminal_detection.c
src/lle/buffer/: buffer.c  buffer_management.c  buffer_validator.c  change_tracker.c  cursor_manager.c
src/parser/: node.c  parser.c
src/scanner/: scanner.c
src/symtable/: symtable.c
tests/line_editor/: benchmark_phase_2c.c  benchmark_phase_2d.c  meson.build  test_backspace_enhancement.c  test_backspace_logic.c  test_boundary_crossing_fix.c  test_cursor_math.c  test_display_cursor_apis.c  test_display_stabilization.c  test_display_state_sync.c  test_framework.h  test_history_navigation_commands.c  test_history_navigation_fix.c  test_lle_010_integration.c  test_lle_011_terminal_output.c  test_lle_015_prompt_structure.c  test_lle_016_prompt_parsing.c  test_lle_017_prompt_rendering.c  test_lle_018_multiline_input_display.c  test_lle_019_theme_interface.c  test_lle_020_basic_theme_application.c  test_lle_021_key_input_handling.c  test_lle_022_key_event_processing.c  test_lle_023_basic_editing_commands.c  test_lle_024_history_structure.c  test_lle_025_history_management.c  test_lle_026_history_navigation.c  test_lle_027_utf8_text_handling.c  test_lle_028_unicode_cursor_movement.c  test_lle_029_completion_framework.c  test_lle_030_basic_file_completion.c  test_lle_031_completion_display.c  test_lle_032_undo_stack_structure.c  test_lle_033_undo_operation_recording.c  test_lle_034_undo_redo_execution.c  test_lle_035_syntax_highlighting_framework.c  test_lle_036_basic_shell_syntax.c  test_lle_037_syntax_display_integration.c  test_lle_038_core_line_editor_api.c  test_lle_039_line_editor_implementation.c  (+18 more)
(+4394 files in other folders)
