bin_PROGRAMS = lusush
lusush_SOURCES = src/lusush.h src/lusush.c src/init.h src/init.c src/alias.h src/alias.c src/builtins.h src/builtins.c src/opts.h src/opts.c src/cmdlist.h src/cmdlist.c src/misc.h src/misc.c src/prompt.h src/prompt.c src/input.h src/input.c src/history.h src/history.c src/parse.h src/parse.c src/ expand.h src/expand.c src/exec.h src/exec.c
